--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.12.0",
+    "cloudinary": "^2.7.0",
     "framer-motion": "^12.23.6",
     "next": "15.4.1",
     "next-auth": "^4.24.11",
